# aurum

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: macros.cmake
lib/: CMakeLists.txt
lib/include/aurum/: DebugConsole.h  Plugin.h
lib/include/aurum/dsp/: ADSR.h  BiquadFilter.h  Filter.h  Functions.h  Generator.h  Global.h  Instrument.h  Processor.h  Voice.h
lib/include/aurum/midi/: Note.h  Tuning.h
lib/include/aurum/vst/: AudioEffect.h  EditController.h  EditorView.h  EmbeddedForm.h  UID.h
lib/src/: DebugConsole.cpp  Plugin.cpp
lib/src/dsp/: ADSR.cpp  BiquadFilter.cpp  Filter.cpp  Functions.cpp  Global.cpp  Processor.cpp  Voice.cpp
lib/src/midi/: Note.cpp  Tuning.cpp
lib/src/vst/: EditorView.cpp  EmbeddedForm.cpp
source/: CMakeLists.txt
source/plugins/adelay/: CMakeLists.txt
source/plugins/adelay/resource/: adelay.rc
source/plugins/adelay/src/: factory.cpp
source/plugins/dummy/: CMakeLists.txt
source/plugins/dummy/src/: DummyController.cpp  DummyController.h  DummyEffect.cpp  DummyEffect.h  DummyView.cpp  DummyView.h  factory.cpp  ids.h  version.h
source/staging/: CMakeLists.txt
source/staging/test_nana/: CMakeLists.txt
source/staging/test_nana/src/: about_png.cpp  test_nana.cpp
